# forge

./: .gitignore  AGENTS.md  CLAUDE.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  Justfile  PRODUCTION_READINESS_REPORT.md  README.md  TODO.md  TODO_ANALYSIS.md  flake.nix  forge.example.ron  forge.ron  migrate.md  next.md  package.json  start-with-extensions.sh
.github/: copilot-instructions.md
.github/workflows/: build-extensions.yml  build-integrations.yml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml  git-smart-http-v2-parity.yml  setup-devenv.yml  validate-graphql-schema.yml
apps/web/: .env.example  README.md  astro.config.example.mjs  astro.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/playwright-report/: index.html
apps/web/src/: middleware.ts
apps/web/src/components/: ActionsMenu.vue  CreateRepositoryModal.vue  ExtensionTabs.vue  HomeLanding.vue  LinkRepositoryModal.vue  RepoView.readme.test.ts  RepoView.vue  ThemeSwitcher.vue
apps/web/src/layouts/: MainLayout.astro
apps/web/src/lib/: graphql.ts  (+5 more)
apps/web/test-results/: .last-run.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
crates/git-http/: Cargo.toml
crates/git-http/src/: errors.rs  lib.rs  negotiation.rs  pack.rs  pkt.rs  repo.rs  state.rs  v2.rs
crates/server/: Cargo.toml  next.md  test_extensions.sh
crates/server/src/: db.rs  lib.rs  metrics_exporter.rs
crates/server/tests/: git_http_v2_bench.sh  git_http_v2_clone.sh  git_http_v2_concurrency.sh  git_http_v2_deepen.sh  git_http_v2_fetch_update.sh  git_http_v2_filter_symlink_submodule.sh  git_http_v2_filter_tree.sh  git_http_v2_negotiation.sh  git_http_v2_partial_blob_limit.sh  git_http_v2_partial_blob_none.sh  git_http_v2_rust_backend.sh  git_http_v2_shallow.sh  git_http_v2_trace_diff.sh  git_http_v2_visibility.sh
design/: .gitignore  package-lock.json  package.json  vite.config.ts
design/.storybook/: main.ts
design/src/components/: CreateRepositoryDialog.vue  LinkRepositoryDialog.vue  index.ts
design/src/stories/: Button.stories.ts
docs/: CLONE_COMPARISON.md  CLONE_REPOSITORIES.md
docs/adrs/: 0001-database-layout.md  0002-wasm-extension-system.md  0003-oci-extension-distribution.md  0004-extension-slot-system.md  0005-repository-file-browsing-api.md  0006-frontend-architecture.md  0007-design-system.md
docs/deployment/: migration-guide.md  production-deployment.md
docs/guides/: authentication.md  context-versioning.md  creating-extensions.md  oci-extensions.md  smart-http.md
docs/prds/: 0001-single-user-forge-api.md  0002-extension-packages.md
docs/rfcs/: 0001-minimal-graphql-api.md  0002-git-operations-integration.md  0003-authentication-authorization.md  0004-pull-requests-extension.md  0005-repository-metadata-cue.md  0006-hot-reloading-wasm-extensions.md  0007-component-model-adoption.md
extensions/: README.md
extensions/issues/: README.md
extensions/issues/api/: justfile
extensions/issues/shared/: schema.graphql
extensions/issues/ui/: codegen.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
server/: CLI.md  Cargo.toml  EXTENSION_STATUS.md  IMPLEMENTATION_NOTES.md  RECENT_FIXES.md  next.md  run-dev.sh  test_extension_system.sh
server/.forge/db/: forge.db-shm  forge.db-wal
server/examples/extension/src/: lib.rs
server/extensions/: .gitkeep  README.md  issues.wasm
server/extensions/example-rust-extension/: Cargo.toml
server/extensions/example-rust-extension/.cargo/: config.toml
server/extensions/example-rust-extension/src/: bindings.rs  lib.rs
server/extensions/issues/: Cargo.toml
server/extensions/issues/src/: lib.rs
server/extensions_dir/: issues.wasm  users.wasm
server/migrations/: 20240529120000_init.sql  20240529131500_add_remote_repositories.sql
server/src/: db.rs  lib.rs  main.rs  metrics_exporter.rs  supervisor.rs  test_helpers.rs
server/src/api/: auth_handlers.rs  mod.rs  playground.rs  server.rs
server/src/auth/: atproto.rs  mod.rs  session.rs
server/src/config/: loader.rs  mod.rs
server/src/extensions/: cache.rs  interface.rs  interface_tests.rs  loader.rs  loader_tests.rs  mod.rs  oci_fetcher.rs  runtime.rs  schema.rs  security_tests.rs  wasm_runtime.rs  wit_bindings.rs
server/src/extensions/schema/: builder.rs  field.rs  fragment.rs  interface.rs  object.rs  scalar.rs  sdl.rs  types.rs  validator.rs  validator_tests.rs
server/src/git_http/: errors.rs  mod.rs  negotiation.rs  pack.rs  pkt.rs  repo.rs  v2.rs
server/src/graphql/: dynamic_extensions.rs  dynamic_schema.rs  errors.rs  extension_resolver.rs  extension_subgraph.rs  federation_coordinator.rs  federation_gateway.rs  mod.rs  schema.rs  schema_composer.rs  schema_merger.rs  virtual_subgraph.rs
server/src/group/: db.rs  mod.rs  models.rs  mutations.rs  queries.rs
server/src/repository/: cache.rs  db.rs  entries.rs  mod.rs  models.rs  mutations.rs  queries.rs  storage.rs
server/src/router/: core_executor.rs  extension_executor.rs  mod.rs
server/src/validation/: mod.rs  slug.rs  url.rs
server/tests/: clone_repository_test.rs  git_http_v2_bench.sh  git_http_v2_clone.sh  git_http_v2_concurrency.sh  git_http_v2_deepen.sh  git_http_v2_fetch_update.sh  git_http_v2_filter_symlink_submodule.sh  git_http_v2_filter_tree.sh  git_http_v2_ls_remote.sh  git_http_v2_negotiation.sh  git_http_v2_partial_blob_limit.sh  git_http_v2_partial_blob_none.sh  git_http_v2_rust_backend.sh  git_http_v2_shallow.sh  git_http_v2_smoke.sh  git_http_v2_trace_diff.sh  git_http_v2_visibility.sh  integration_test.rs  router_pipeline.rs
server/wit/: extension.wit
(+56 files in other folders)
