[package]
name = "git-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
bytes = "1"
futures = "0.3"
gix = "0.73.0"
metrics = "0.23"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "process", "sync"] }
tokio-stream = "0.1"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
